--- a/problem183dynamicsubmit.qmd
+++ b/problem183dynamicsubmit.qmd
@@ -1,4 +1,4 @@
-# Dynamic Problem Statement {.unnumbered}
+# Problem 5.11 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
@@ -17,6 +17,7 @@ import random
 import asyncio
 import io
 import math
+import string
 from datetime import datetime
 from pathlib import Path
 
@@ -27,7 +28,9 @@ F3=reactive.Value("__")
 F4=reactive.Value("__")
 E=210
 
-
+def generate_random_letters(length):
+    # Generate a random string of letters of specified length
+    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))  
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -37,77 +40,80 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of mm", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
 
 
 def server(input, output, session):
+    # Initialize a counter for attempts
+    attempt_counter = reactive.Value(0)
+
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A series of solid, steel, circular bars are loaded with forces as shown, where F[1] = {F1()} kN, F[2] = {F2()} kN, F[3] = {F3()} kN, and F[4] = {F4()} kN. What is the total change in length of the system? Assume E = 210 GPa for steel.")]
+        return[ui.markdown(f"A series of solid, steel, circular bars are loaded with forces as shown, where F<sub>1</sub> = {F1()} kN, F<sub>2</sub> = {F2()} kN, F<sub>3</sub> = {F3()} kN, and F<sub>4</sub> = {F4()} kN. What is the total change in length of the system? Assume E = 210 GPa for steel.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F1.set(random.randrange(1, 10, 0.1))
-        F2.set(random.randrange(1, 10, 0.1))
-        F3.set(random.randrange(1, 10, 0.1))
-        F4.set(random.randrange(1, 10, 0.1))
+        F1.set(random.randrange(10, 100, 1)/10)
+        F2.set(random.randrange(10, 100, 1)/10)
+        F3.set(random.randrange(10, 100, 1)/10)
+        F4.set(random.randrange(10, 100, 1)/10)
         
 
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
-        
-        instr= ((F1()*3)/(E()*pi*0.5**2)+((F1()+F2())*3)/(E()*pi*1**2)+((F1()+F2()+F3())*4)/(E()*pi*0.25**2)+((F1()+F2()+F3()+F4())*2)/(E()*pi*0.5**2))*1000
-        #check=math.isclose(float(input.answer()),instr,rel_tol=0.001)
-        if math.isclose(float(input.answer()),instr,rel_tol=0.001):
-           check="*Correct*"
+        attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
+        instr= ((F1()*3)/(E*math.pi*0.5**2)+((F1()+F2())*3)/(E*math.pi*1**2)+((F1()+F2()+F3())*4)/(E*math.pi*0.25**2)+((F1()+F2()+F3()+F4())*2)/(E*math.pi*0.5**2))*1000
+        if math.isclose(float(input.answer()), instr, rel_tol=0.001):
+            check = "*Correct*"
+            correct_indicator = "JL"
         else:
-           check="*Not Correct.*"
-        
-        correct_indicator = "JL" if check == "*Correct*" else "JG"
-        
-        feedback=ui.markdown(f"Your answer of {input.answer()} is {check}.  For reference in debugging this, the calculated instructor answer is {instr}")
-        attempts.append(f"{datetime.now()}, {input.submit()},{input.answer()},{check}\n")
-        m=ui.modal(
-          feedback,
-          title="Feedback",
-          easy_close=True
+            check = "*Not Correct.*"
+            correct_indicator = "JG"
+
+        # Generate random parts for the encoded attempt.
+        random_start = generate_random_letters(4)
+        random_middle = generate_random_letters(4)
+        random_end = generate_random_letters(4)
+        encoded_attempt = f"{random_start}{problem_ID}-{random_middle}{attempt_counter()}{correct_indicator}-{random_end}{input.ID()}"
+
+        # Store the most recent encoded attempt in a reactive value so it persists across submissions
+        session.encoded_attempt = reactive.Value(encoded_attempt)
+
+        # Append the attempt data to the attempts list without the encoded attempt
+        attempts.append(f"{datetime.now()}, {attempt_counter()}, {input.answer()}, {check}\n")
+
+        # Show feedback to the user.
+        feedback = ui.markdown(f"Your answer of {input.answer()} is {check}. For reference in debugging this, the calculated instructor answer is {instr}")
+        m = ui.modal(
+            feedback,
+            title="Feedback",
+            easy_close=True
         )
         ui.modal_show(m)
-    import random
-    import string
 
-def generate_random_letters(length):
-    # Generate a random string of letters of specified length
-    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))   
-
-random_start = generate_random_letters(4)  
-random_middle = generate_random_letters(4)
-random_end = generate_random_letters(4)    
-
-encoded_attempt = f"{random_start}{problem_ID}{random_middle}{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
-
-
-attempts.append(f"{datetime.now()}, {encoded_attempt}\n")
-
-    @session.download(
-        filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
-    )
+    @session.download(filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv")
     async def download():
-        # This version uses a function to generate the filename. It also yields data
-        # multiple times.
-        yield "Timestamp,Encoded Attempt\n"
-   
-        for attempt in attempts:
-          await asyncio.sleep(0.25) 
-          yield attempt
+        # Start the CSV with the encoded attempt (without label)
+        final_encoded = session.encoded_attempt() if session.encoded_attempt is not None else "No attempts"
+        yield f"{final_encoded}\n\n"
+        
+        # Write the header for the remaining CSV data once
+        yield "Timestamp,Attempt,Answer,Feedback\n"
+        
+        # Write the attempts data, ensure that the header from the attempts list is not written again
+        for attempt in attempts[1:]:  # Skip the first element which is the header
+            await asyncio.sleep(0.25)  # This delay may not be necessary; adjust as needed
+            yield attempt
 
+
+# App installation
 app = App(app_ui, server)
 
 ```
