--- a/problem191dynamicsubmit.qmd
+++ b/problem191dynamicsubmit.qmd
@@ -1,4 +1,4 @@
-# Dynamic Problem Statement {.unnumbered}
+# Problem 5.27 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
@@ -17,8 +17,13 @@ import random
 import asyncio
 import io
 import math
+import string
 from datetime import datetime
 from pathlib import Path
+
+def generate_random_letters(length):
+    # Generate a random string of letters of specified length
+    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))
 
 problem_ID="191"
 L1=reactive.Value("__")
@@ -44,70 +49,74 @@ app_ui = ui.page_fluid(
 
 
 def server(input, output, session):
+    # Initialize a counter for attempts
+    attempt_counter = reactive.Value(0)
+
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A bar is attached to two wires, one steel and one aluminum. If the lengths of the wires L[1] = {L1()} in. and L[2] = {L2()} in., find the distance x that load F = {F()} kips must be placed at so that the bar remains horizontal after the load is applied. Both wires have the same cross-section area A = {A()} in.^2. Assume E[steel] = 29,000 ksi and E[aluminum] = 10,000 ksi.")]
+        return[ui.markdown(f"A bar is attached to two wires, one steel and one aluminum. If the lengths of the wires L<sub>1</sub> = {L1()} in. and L<sub>2</sub> = {L2()} in., find the distance x that load F = {F()} kips must be placed at so that the bar remains horizontal after the load is applied. Both wires have the same cross-section area A = {A()} in. <sup>2</sup>. Assume E<sub>steel</sub> = 29,000 ksi and E<sub>aluminum</sub> = 10,000 ksi.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        L1.set(random.randrange(5, 15, 0.1))
-        L2.set(L1()*2)
-        F.set(random.randrange(3, 15, 0.1))
-        A.set(random.randrange(.02, .25, 0.01))
+        L1.set(random.randrange(50, 150, 1)/10)
+        L2.set(round(L1()*2, 2))
+        F.set(random.randrange(30, 150, 1)/10)
+        A.set(random.randrange(2, 25, 1)/100)
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
-        PsPa = (L1()*Esteel*A)/(L2()*Ealuminum*A)
+        attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
+        PsPa = (L1()*Esteel*A())/(L2()*Ealuminum*A())
         Ps = (F()/(PsPa+1))*PsPa
         instr=(Ps*12)/F()
-        #check=math.isclose(float(input.answer()),instr,rel_tol=0.001)
-        if math.isclose(float(input.answer()),instr,rel_tol=0.001):
-           check="*Correct*"
+        if math.isclose(float(input.answer()), instr, rel_tol=0.001):
+            check = "*Correct*"
+            correct_indicator = "JL"
         else:
-           check="*Not Correct.*"
-        
-        correct_indicator = "JL" if check == "*Correct*" else "JG"
-        
-        feedback=ui.markdown(f"Your answer of {input.answer()} is {check}.  For reference in debugging this, the calculated instructor answer is {instr}")
-        attempts.append(f"{datetime.now()}, {input.submit()},{input.answer()},{check}\n")
-        m=ui.modal(
-          feedback,
-          title="Feedback",
-          easy_close=True
+            check = "*Not Correct.*"
+            correct_indicator = "JG"
+
+        # Generate random parts for the encoded attempt.
+        random_start = generate_random_letters(4)
+        random_middle = generate_random_letters(4)
+        random_end = generate_random_letters(4)
+        encoded_attempt = f"{random_start}{problem_ID}-{random_middle}{attempt_counter()}{correct_indicator}-{random_end}{input.ID()}"
+
+        # Store the most recent encoded attempt in a reactive value so it persists across submissions
+        session.encoded_attempt = reactive.Value(encoded_attempt)
+
+        # Append the attempt data to the attempts list without the encoded attempt
+        attempts.append(f"{datetime.now()}, {attempt_counter()}, {input.answer()}, {check}\n")
+
+        # Show feedback to the user.
+        feedback = ui.markdown(f"Your answer of {input.answer()} is {check}. For reference in debugging this, the calculated instructor answer is {instr}")
+        m = ui.modal(
+            feedback,
+            title="Feedback",
+            easy_close=True
         )
         ui.modal_show(m)
-    import random
-    import string
 
-def generate_random_letters(length):
-    # Generate a random string of letters of specified length
-    return ''.join(random.choice(string.ascii_lowercase) for _ in range(length))   
-
-random_start = generate_random_letters(4)  
-random_middle = generate_random_letters(4)
-random_end = generate_random_letters(4)    
-
-encoded_attempt = f"{random_start}{problem_ID}{random_middle}{len(attempts)+1}{correct_indicator}{random_end}{input.ID()}"
-
-
-attempts.append(f"{datetime.now()}, {encoded_attempt}\n")
-
-    @session.download(
-        filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv"
-    )
+    @session.download(filename=lambda: f"Problem_Log-{problem_ID}-{input.ID()}.csv")
     async def download():
-        # This version uses a function to generate the filename. It also yields data
-        # multiple times.
-        yield "Timestamp,Encoded Attempt\n"
-   
-        for attempt in attempts:
-          await asyncio.sleep(0.25) 
-          yield attempt
+        # Start the CSV with the encoded attempt (without label)
+        final_encoded = session.encoded_attempt() if session.encoded_attempt is not None else "No attempts"
+        yield f"{final_encoded}\n\n"
+        
+        # Write the header for the remaining CSV data once
+        yield "Timestamp,Attempt,Answer,Feedback\n"
+        
+        # Write the attempts data, ensure that the header from the attempts list is not written again
+        for attempt in attempts[1:]:  # Skip the first element which is the header
+            await asyncio.sleep(0.25)  # This delay may not be necessary; adjust as needed
+            yield attempt
 
+
+# App installation
 app = App(app_ui, server)
 
 ```
