--- a/problem269dynamicsubmit.qmd
+++ b/problem269dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 6.13 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A system of cylinders are attached to the wall at one end.  ](images/269.png){fig-alt=" A system of cylinders are attached to the wall at one end. The first torque is applied at the connection of the cylidner attached to the wall made of steel with the cylinder made of aluminum. The second torque is applied at the connection between the cylinder made of aluminum and the second cylinder made of steel. The third torque is applied at the free end. The first cyliner has length 10 cm and diamter 5 cm. The second cyliner has length 15 cm and diamter  3 cm. The third cyliner has length 8 cm and diamter 4 cm.  "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,14 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+problem_ID="269"
+T1=reactive.Value("__")
+T2=reactive.Value("__")
+T3=reactive.Value("__")
+Es=77
+Ea=27
+vs=0.3
+va=0.33
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +42,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of degrees", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +55,29 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"Three moments are applied to the system of cylinders as shown. Assume T<sub>1</sub> = {T1()} kN-m, T<sub>2</sub> = {T2()} kN-m, and T<sub>3</sub> = {T3()} kN-m. If E<sub>steel</sub> = 77 GPa and E<sub>aluminum</sub> = 27 GPa, determine the total angle of twist at the free end.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        T1.set(random.randrange(20, 100, 1)/10)
+        T2.set(T1()+random.randrange(20, 100, 1)/10)
+        T3.set(round(T2()*random.randrange(5, 8, 1)/10, 2))
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        F1 = T1()+T2()-T3()
+        F2 = T2()-T3()
+        F3 = -T3()
+        J1 = (math.pi/2)*((5/200)**4)
+        J2 = (math.pi/2)*((3/200)**4)
+        J3 = (math.pi/2)*((4/200)**4)
+        Gs = Es/(2*(1+vs))
+        Ga = Ea/(2+(1+va))
+        instr= (T1()*.1)/(J1*Gs*10**6) + (T2()*.15)/(J2*Ga*10**6) + (T3()*.08)/(J3*Gs*10**6)
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +123,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
