--- a/problem204dynamicsubmit.qmd
+++ b/problem204dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 4.23 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A block is pulled in by two forces.](images/204.png){fig-alt="Picture of a steel block being pulled in uniformly pulled by two forces. The block has sides L and thickness t."}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,14 +25,13 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
+problem_ID="204"
 L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
+t=reactive.Value("__")
+Fx=reactive.Value("__")
+Fy=reactive.Value("__")
+E=29000
+v=0.29
 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
@@ -56,22 +55,24 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A square steel plate of side length L = {L()} in. and thickness t = {t()} in. is uniformly pulled by two forces F<sub>x</sub> = {Fx()} kips and F<sub>y</sub> = {Fy()} kips as shown. If E = 29,000 ksi and Poisson's ratio v = 0.29, determine the change in thickness of the plate. ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        L.set(random.randrange(50, 150, 1)/10)
+        t.set(random.randrange(2, 10, 1)/10)
+        Fx.set(random.randrange(100, 500, 1)/10)
+        Fy.set(random.randrange(100, 500, 1)/10)
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        sigmax = Fx()/(L()*t())
+        sigmay = Fy()/(L()*t())
+        instr= t()*(-v/E)*(sigmax+sigmay)
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
