--- a/problem205dynamicsubmit.qmd
+++ b/problem205dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 4.24 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A strain gauge is placed on a test sample and a vertical load is applied to the test sample. ](images/205.png){fig-alt="A strain gauge is placed on a test sample and a vertical load is applied to the test sample. The sides of the length in the x direction of the sample is 4 in, in the y direction it is 3 in, and it is 1 in in the z direction."}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,13 +25,11 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
+problem_ID="205"
+P1=reactive.Value("__")
+E=reactive.Value("__")
+v=reactive.Value("__")
+SG=reactive.Value("__")
 
 
 
@@ -43,7 +41,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in percent", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +54,24 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A strain gauge is placed on a polymer test sample with an elastic modulus E =  {E()} x 10<sup>6</sup> psi and a Poisson's ratio of v = {v()}. When a P<sub>1</sub> = {P1()} kip vertical load is applied to the test sample, the strain gauge reads a strain of SG = {SG()} x 10<sup>-6</sup> in the x-direction. What is the relative error of the strain gauge compared to the theoretical strain of the test sample? Note: relative error is defined to be the difference between the measured value and the theoretical value divided by the theoretical value ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        P1.set(random.randrange(20, 200, 1)/10)
+        E.set(random.randrange(5, 20, 1))
+        v.set(random.randrange(20, 40, 1)/100)
+        SG.set(round((v()*P1()*1000)/(12*E())-(0.3-2)*0.1, 2))
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        sigmaz = (-P1()*1000)/(4*3)
+        Ex = ((-v()*(sigmaz))/(E()*10**6))
+        instr=  ((Ex - SG()*10**-6)/Ex)*100
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
