--- a/problem224dynamicsubmit.qmd
+++ b/problem224dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 5.52 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: Two cylindrical rods are connected and heated until they expand to close the gap. ](images/224.png){fig-alt=" Two cylindrical rods are connected and heated until they expand to close the gap to the wall on the right hand side. The left hand side is fixed. Rod A is attached to the wall on the left hand side. Rod B is attached to Rod A. "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,14 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+problem_ID="224"
+d=reactive.Value("__")
+rA=reactive.Value("__")
+rB=reactive.Value("__")
+L1=reactive.Value("__")
+L2=reactive.Value("__")
+alphaA=6*10**-6
+alphaB=10*10**-6
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +42,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of °F", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +55,24 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"Two cylindrical rods are heated until they expand, just closing the gap of d = {d()} in. The coefficient of thermal expansion, α, for material A and B is 6 x 10<sup>-6</sup>/°F and 10 x 10<sup>-6</sup>/°F, respectively. The radius of A r<sub>A</sub> = {rA()} in and the length is L<sub>1</sub> = {L1()} in. The radius of B is r<sub>B</sub> = {rB()} in and the length is L<sub>2</sub> = {L2()} in. What is the change in temperature.  ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        d.set(random.randrange(1, 20, 1)/100)
+        rA.set(random.randrange(5, 20, 1)/10)
+        rB.set(round(rA()*1.6, 2))
+        L1.set(random.randrange(5, 20, 1))
+        L2.set(round(L1()*0.6, 2))
+        
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        instr= d()/(alphaA*L1()+alphaB*L2())
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +118,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
