--- a/problem225dynamicsubmit.qmd
+++ b/problem225dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 5.53 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: Three cylindrical rods are rigidly connected togehter with a load applied to the free end. ](images/225.png){fig-alt=" Three cylindrical rods are rigidly connected togehter with a load applied to the free end. The left hand side is connected to the wall and is attached to rod A. Rod B is attached to rod A on the left and rod C on the right. The load is applied to the free end of rod C. The diameter of rod A is 3 cm, the diameter of rod B is 1 cm, and the diameter of rod C is 2 cm."}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,18 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
+problem_ID="225"
+L1=reactive.Value("__")
+L2=reactive.Value("__")
+L3=reactive.Value("__")
 F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+dT=reactive.Value("__")
+alphaA=10*10**-6
+alphaB=5*10**-6
+alphaC=7*10**-6
+EA=40*10**9
+EB=120*10**9
+EC=80*10**9
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +46,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of m", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +59,25 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"Three cylindrical rods of lengths L<sub>1</sub> = {L1()} in., L<sub>2</sub> = {L2()} in., and L<sub>3</sub> = {L3()} in. are connected together. A force F = {F()} kN is applied to the free end and all three rods are heated by {dT()} °C. The coefficient of thermal expansion, α, and elastic modulus, E, for each material are α<sub>A</sub> = 10 x 10<sup>-6</sup> /°C, α<sub>B</sub> = 5 x 10<sup>-6</sup> /°C, α<sub>C</sub> = 7 x 10<sup>-6</sup> /°C, E<sub>A</sub> = 40 GPa, E<sub>B</sub> = 120 GPa, and E<sub>C</sub> = 80 GPa. What is the total deflection of the right rod tip?  ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        L1.set(random.randrange(10, 90, 1))
+        L2.set(round(L1()*0.8))
+        L3.set(round(L1()*(2/3)))
+        F.set(random.randrange(5, 50, 1))
+        dT.set(random.randrange(100, 300, 10))
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        deltaL = (F()*L1()/100)/(EA*math.pi*.015**2) + (F()*L2()/100)/(EB*math.pi*.005**2) + (F()*L3()/100)/(EC*math.pi*.01**2)
+        deltaT = alphaA*dT()*L1()/100 + alphaB*dT()*L2()/100 + alphaC*dT()*L3()/100 
+        instr= deltaL + deltaT
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +123,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
