--- a/problem247dynamicsubmit.qmd
+++ b/problem247dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 5.37 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: Two aluminum circular rods are placed between two fixed walls. ](images/247.png){fig-alt=" Two aluminum circular rods are placed between two fixed walls. Member 1 is on the left and member 2 is on the right. Member 2 has diameter d[1] and length L[1]. Member 2 has diameter d[2] and length L[2] "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,13 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
+problem_ID="247"
 F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+d1=reactive.Value("__")
+d2=reactive.Value("__")
+L1=reactive.Value("__")
+L2=reactive.Value("__")
+Ewood=70
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +41,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of MPa", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +54,26 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"Two aluminum circular rods are attached to two fixed walls as shown. Assume E = 70 MPa for both cylinders, F = {F()} kN, d<sub>1</sub> = {d1()} mm, d<sub>2</sub>  = {d2()} mm, L<sub>1</sub>  = {L1()} mm, and L<sub>2</sub>  = {L2()} mm. Determine the normal stress in member 1.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        F.set(random.randrange(20, 100, 1))
+        d1.set(random.randrange(15, 50, 1))
+        d2.set(round(d1()*1.5, 2))
+        L1.set(random.randrange(200, 800, 10))
+        L2.set(round(L1()*(2/3), 2))
+       
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        LHS = (L1()/100)/(math.pi*(d1()/200)**2) + (L2()/100)/(math.pi*(d2()/200)**2)
+        RHS = (F()*L2()/100)/(math.pi*(d2()/200)**2)
+        instr= (RHS/LHS)/(math.pi*(d1()/200)**2)
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +119,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
