--- a/problem248dynamicsubmit.qmd
+++ b/problem248dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 5.38 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A pressure load is applied to a short column made of wood and concrete. ](images/248.png){fig-alt=" A pressure load is applied to a short column made of wood and concrete. Concerete is the center of the column and it is surrounded by wood. The side of the column is 3 * b, with the width of the wood, concrete, and wood each being b. The other side of the column is h[1] + h[2] + h[1], with the length of the wood being h[1] and the length of the concrete being h[2]. "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,13 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
-L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+problem_ID="248"
+w=reactive.Value("__")
+b=reactive.Value("__")
+h1=reactive.Value("__")
+h2=reactive.Value("__")
+Econcrete=25
+Ewood=12
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +41,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of kN", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +54,26 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A distributed load w = {w()} N/cm<sup>2</sup> is applied to a short column made from wood and concrete. Assume E<sub>concrete </sub>= 25 GPa, E<sub>wood</sub> = 12 GPa, b = {b()} cm, h<sub>1</sub> = {h1()} cm, and h<sub>2</sub> = {h2()} cm. What load is carried by the concrete center?")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        w.set(random.randrange(50, 750, 10))
+        b.set(random.randrange(20, 100, 1)/10)
+        h1.set(b()*1)
+        h2.set(b()*2)
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        Wside = (h2()*b()*2+3*b()*b()*2)*Ewood*10**9
+        Cside = (h2()*b()*2)*Econcrete*10**9
+        RHS = Wside+Cside
+        LHS = (w()*(h1()+h2()+h1())*(3*b()))*Cside
+        instr= LHS/RHS
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +119,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
