--- a/problem250dynamicsubmit.qmd
+++ b/problem250dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 5.39 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A concrete post with 6 steel rebar rods embedded in the concrete supports a load. ](images/250.png){fig-alt=" A concrete post with 6 steel rebar rods embedded in the concrete supports a load, F. The post has diamete d[c] and the rebar rods have diamete d[s]. "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,13 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
+problem_ID="250"
 F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
 L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+dc=reactive.Value("__")
+ds=reactive.Value("__")
+Econcrete=25
+Esteel=200
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +41,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of MPa", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +54,28 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A concrete post of length L = {L()}  m and diameter d<sub>c</sub> = {dc()} mm supports a load F = {F()} kN. The concrete is reinforced with 6 steel rods of diameter d<sub>s</sub> = {ds()} mm. Assume Econcrete = 25 GPa and Esteel = 200 GPa. Determine the stress in the concrete.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        L.set(random.randrange(10, 50, 1)/10)
+        dc.set(random.randrange(100, 500, 10))
+        ds.set(round(dc()/12,2))
+        F.set(random.randrange(100, 500, 10))
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        As = (math.pi*6*(ds()/20)**2)
+        Ac = (math.pi*(dc()/20)**2) - As
+        Cside = Ac*Econcrete
+        Sside = As*Esteel
+        LHS = F()*Cside
+        RHS = Cside+Sside
+        instr= ((LHS/RHS)/(Ac/100**2))/10**3
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +121,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
