--- a/problem270dynamicsubmit.qmd
+++ b/problem270dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 6.14 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A circualr rod is attached to a wall. ](images/270.png){fig-alt=" A circular rod is attached to a wall. The rod has length L and an inner radius r[i] and outer radius r[o]. The torque is apllied at the free end.  "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,12 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
+problem_ID="270"
 L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+ro=reactive.Value("__")
+T=reactive.Value("__")
+G=reactive.Value("__")
+stress=reactive.Value("__")
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +40,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of cm", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +53,26 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A circular rod of length L = {L()} mm, outer radius r<sub>o</sub> = {ro()} mm, and unknown inner radius r<sub>i</sub> has a shear modulus G = {G()} GPa. The rod is subjected to torque T = {T()} kN-m at the free end. If the angle of twist must not exceed 2° and the shear stress must not exceed {stress()} MPa, what is the minimum required inner radius?")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        L.set(random.randrange(250, 500, 10))
+        ro.set(random.randrange(30, 75, 1))
+        G.set(random.randrange(60, 100, 1))
+        T.set(random.randrange(10, 100, 1)/10)
+        stress.set(random.randrange(75, 150, 1))
+        
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        LHS = (((math.pi/2)*stress()*10**6)*(ro()/1000)**4)-(T()*(ro()/1000))
+        RHS = ((math.pi/2)*stress()*10**6)
+        instr= ((LHS/RHS)**.25)*100
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +118,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
