--- a/problem287dynamicsubmit.qmd
+++ b/problem287dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 5.35 {.unnumbered}
+# Problem 6.27 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: Two blocks with square cross sections are stacked and loaded at the top.](images/193.png){fig-alt="Picture with two blocks stacked on top of each other. The bottom block is steel and has a width w[2] and a length L. The top block is aluminum and has a width w[1] and length L. The load is applied to the top of the aluminum block."}
+![Figure 1: A steel rod is attached between two walls. The load is applied as shown. ](images/287.png){fig-alt=" A steel rod is attached between two walls. The load is applied to a perpendicular rod at a distance L from the steel rod. The steel rod has diameter d, the distance between the AB is 40 cm, and the distance between BC is 30 cm.   "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,15 +25,11 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="193"
-F=reactive.Value("__")
-w1=reactive.Value("__")
-w2=reactive.Value("__")
+problem_ID="287"
 L=reactive.Value("__")
-Esteel = 29000
-Ealuminum = 10000
-
-
+F=reactive.Value("__")
+d=reactive.Value("__")
+G = 75
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
 
@@ -43,7 +39,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of inches", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of MPa", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -56,22 +52,26 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"Two blocks with square cross-sections are stacked as shown, with the top block inserted into the bottom block and subjected to load F = {F()} kips. The top block is aluminum (E = 10,000 ksi) with side length w<sub>1</sub> = {w1()} in.  and the bottom block is steel (E = 29,000 ksi) with side length w<sub>2</sub> = {w2()} in. If length L = {L()} in., what is the total change in length of the aluminum block? Ignore the weight of the blocks. ")]
+        return[ui.markdown(f"A steel rod of diameter d = {d()} mm is attached to walls A and C as shown. Two forces F = {F()} kN are applied at distance L = {L()} mm. If the shear modulus of the rod G = 75 GPa, determine the maximum shear stress in the rod.")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        F.set(random.randrange(20, 100, 1)/10)
-        w1.set(random.randrange(15, 50, 1)/10)
-        w2.set(round(w1()*1.5))
-        L.set(random.randrange(50, 200, 1)/10)
+        d.set(random.randrange(20, 60, 1))
+        F.set(random.randrange(2, 20, 1))
+        L.set(random.randrange(80, 120, 1))
+        
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr=F()*L()*((1/((w1()**2)*Ealuminum)) + (1/((w2()**2)*Esteel)))
+        TB = 2*F()*L()/1000
+        J = (math.pi/2)*(d()/2000)**4
+        TA = (0.3*0.4)/(0.4+0.3)
+        TC = TB-TA
+        instr= (TC*(d()/2000))/J
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +117,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
